feat(openAPI): updated open api specification with oauth2 endpoints and security
